Changes in 3.3.1:
- Make sure exceptions in DHT code are caught, fixes a crash (213819)
- Fix several memory leaks at exit
- Fix bug in edge detection of items on the bandwidth schedule
- Fix crash when webinterface plugin is removed and there are active connections to the webserver (214187)

Changes in 3.3:
- Fix deadlock in PacketReader
- Fix bug causing torrent not to get stopped properly when an IO error occurs
- Stop or start trackers when they get disabled or enabled
- Fix CPU consumption bug in DHT NodeLookup and AnnounceTask
- Fix crashes caused by reference count error in piece handling (204227, 186621)
- Make sure powermanagement is inhibited when mediaplayer plugin plays a video
- Fix crash caused by 0 pointer (jobuidelegate not set) (212580)
- Fix deadlock caused by missing endl in JobQueue
- Stopped reannounce timer in HTTPTracker when tracker is stopped after start request failed
- Restore normal limits when unloading bwscheduler plugin

Changes in 3.3rc1:
- Make sure Qt's warnings, critical and fatal messages are printed to stderr in QtMessageOutput (203423)
- Fix crash by handling missing webinterface skins propperly (203430)
- Make TreeFilterModel use case insensitive filtering (203886)
- Draw progressbar in percentage column of view (190875)
- Make sure running torrents at exit are restarted when KT starts up when the QM is disabled (204988)
- Fix bug causing disabled trackers to be announced in a manual announce
- Add action to menu and toolbar to show or hide the GroupView
- Improved DHT's ability to find peers (205346)
- Make sure file locations are updated before torrent is restarted after data file move
- FileSelectDlg now displays if existing files are found
- Only do automatic update in webinterface of visible sections
- Make it possible to disable automatic update in webinterface
- Make playlist sortable in media player plugin
- Add URL drop support to view (208739)
- DHT packet receiving and parsing moved to separate thread (208801)