@@ -3,6 +3,7 @@ Changes in 3.3.1:
 - Fix several memory leaks at exit
 - Fix bug in edge detection of items on the bandwidth schedule
 - Fix crash when webinterface plugin is removed and there are active connections to the webserver (214187)
+- Fix bugs causing context menus to be shown in wrong location (214657)
 
 Changes in 3.3:
 - Fix deadlock in PacketReader
